; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_ssh-agent.c_process_remove_all_identities.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_ssh-agent.c_process_remove_all_identities.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@idtab = common dso_local global %struct.TYPE_2__* null, align 8
@next = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @process_remove_all_identities to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_remove_all_identities(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @idtab, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 1
  %6 = call i32* @TAILQ_FIRST(i32* %5)
  store i32* %6, i32** %3, align 8
  br label %7

7:                                                ; preds = %18, %1
  %8 = load i32*, i32** %3, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %22

10:                                               ; preds = %7
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @idtab, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @next, align 4
  %15 = call i32 @TAILQ_REMOVE(i32* %12, i32* %13, i32 %14)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @free_identity(i32* %16)
  br label %18

18:                                               ; preds = %10
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** @idtab, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = call i32* @TAILQ_FIRST(i32* %20)
  store i32* %21, i32** %3, align 8
  br label %7

22:                                               ; preds = %7
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** @idtab, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  %25 = load i32*, i32** %2, align 8
  %26 = call i32 @send_status(i32* %25, i32 1)
  ret void
}

declare dso_local i32* @TAILQ_FIRST(i32*) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, i32*, i32) #1

declare dso_local i32 @free_identity(i32*) #1

declare dso_local i32 @send_status(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
